--- a/style.css
+++ b/style.css
@@ -92,16 +92,11 @@ footer {
 	color: #BBBBBB;
 }
 
-main {
-	width: 940px;
-	margin: auto;
-
-}
 form {
 	margin: 40px 0;
 }
 
-form label, form textarea {
+form label, form textarea, form legend {
 	display: block;
 	font-size: 20px;
 	margin: 10px;
@@ -118,3 +113,144 @@ form label, form textarea {
 	margin: 30px 0;
 }
 
+.enviar {
+	width: 40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+}
+
+.enviar:hover {
+	background: red;
+	transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
+
+/*css da página inicial*/ 
+
+.banner {
+    width:100%;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+
+.principal {
+	padding:  3em 0;
+	background: #FFFFFFFF;
+	width: 940px;
+	margin: auto;
+}
+
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.mapa {
+    padding: 3em 0;
+	background: linear-gradient(#FFFFFF;#888888);
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: auto;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.beneficios {
+	padding:  3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
+	font-weight: bold;
+}
+
+.itens:before {
+    content: "★";
+} 
+
+.imagem-beneficios {
+    width: 60%;
+	text-align: center;
+}
+
+.video {
+	width: 560px;
+	margin:  2em auto;
+}
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
+}
